Update dev env to use jinja2

--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -55,6 +55,7 @@ dependencies:
   ## Running scripts in torchani/tools ##
   - matplotlib
   - pynvml
+  - jinja2  # Templating engine to build generated code and docs
 
   ## Building torchani/docs ##
   - sphinx
