--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -9,7 +9,7 @@ dependencies:
   - python=3.10
   - pip>=24.0
   - numpy=1.26
-  - pytorch::pytorch=2.3
+  - pytorch::pytorch=2.3  # Modify to 'pytorch::pytorch=2' for macOS
   - typing_extensions>=4.0.0
   - h5py  # HDF5 backend for datasets
   - tqdm  # progress bar util
@@ -23,13 +23,12 @@ dependencies:
   - ase
 
   ## NVIDIA CUDA GPU support ##
-  - pytorch::pytorch-cuda=11.8
-  # If using **only** CPU, comment prev line and uncomment the next:
-  #- pytorch::cpuonly
+  - pytorch::pytorch-cuda=11.8  # Comment this line for macOS, or to **disable** CUDA GPU support
+  #- pytorch::cpuonly  # Comment to **disable** CUDA GPU support
 
   ## cuAEV and MNP ##
   # For more details consult the "developer notes" section in README.md
-  # If using **only** CPU, comment all lines on this block
+  # For macOs, or if CUDA GPU support is **disabled**, comment all lines on this block
   - setuptools>=64
   - setuptools-scm>=8
   - gxx_linux-64=11.4
@@ -49,7 +48,8 @@ dependencies:
   - expecttest  # indirect dependency of torch.testing
   # Extra data backends for tests:
   - pandas  # Parquet backend
-  - pyarrow  # Parquet backend
+  - pyarrow  # Parquet backend, comment this line for macOS
+  #- fastparquet  # Parquet backend, uncomment this line for macOS
   - zarr  # Zarr backend
 
   ## Running scripts in torchani/tools ##
