Try to make pydata docs work

--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -58,6 +58,7 @@ dependencies:
 
   ## Building torchani/docs ##
   - sphinx
-  - sphinx_rtd_theme
+  - sphinx-design
   - sphinx-gallery
+  - pydata-sphinx-theme
   - tensorboard
