--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Untitled.ipynb
 # Build output of Sphinx docs
 /docs/build/
 /docs/src/examples_autogen/
+/docs/src/api_autogen/
 /docs/src/sg_execution_times.rst
 
 # Build output of CUDA / C++ extensions
